# faceExpressionRemoval

./: .gitignore  CMakeLists.txt  Makefile  README.md  dataset.py  layer.py  load_recog.py  network_model.py  normalize.cpp  train.py
src/: conv2d.py  dataset.py  load_model.py  max_pool_2d.py  network_model.py  normalize.cpp  process.py  recognizer.py  train.py  utils.py
utilities/: model.ldm  model.pcd
